TheKabal (22 September 2013)
--------------------------------------
Move TemplateSystem to BntXmlTemplateSystem
Move PluginSystem to BntPluginSystem
Move CalcLevels to BntCalcLevels
Move PlayerLog to BntPlayerLog
Move CheckBan to BntCheckBan
Move Timer to BntTimer (classes should be prefixed with Bnt where possible)
Move SectorDefense to BntSectorDefense (classes should be prefixed with Bnt where possible)
Move AdminLog to BntAdminLog (classes should be prefixed with Bnt where possible)
Move SetPaths to BntSetPaths (classes should be prefixed with Bnt where possible)
Move MoveLog to BntMoveLog (classes should be prefixed with Bnt where possible)

TheKabal (21 September 2013)
--------------------------------------
Change the install documentation to specifically call out that people need to ask their hosting provider for the location of the program to call from cron.

TheMightyDude (17 September 2013)
--------------------------------------
Optimized flag and supported languages code in index.php and index.tpl files.

TheKabal (14 September 2013)
--------------------------------------
Switch faq.php to use template, move hardcoded title out to language file
Move hardcoded text out of index into language files
Make index load language flags & links based on drop-in supported language directory
Localize flag for languages into language file & table
Switch new.php to use template, fix minor bug in new2 preventing new user signups

TheKabal (11 August 2013)
--------------------------------------
Split the database initialization out into a class (BntDb)
Update composer

TheKabal (10 August 2013)
--------------------------------------
Migrate the $link_forums variable to use the $bntreg.

TheMightyDude (28 August 2013)
--------------------------------------
Fixed "Five Finger Discount" Traderoute bug that allows free trade.

TheKabal (10 August 2013)
--------------------------------------
Make the call for ckeditor conditional, so it is only loaded for mailto for now
