@@ -15,15 +15,15 @@
 //  You should have received a copy of the GNU Affero General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 //
-// File: classes/TestXml.php
+// File: classes/BntTestXml.php
 
-if (strpos ($_SERVER['PHP_SELF'], 'TestXml.php')) // Prevent direct access to this file
+if (strpos ($_SERVER['PHP_SELF'], 'BntTestXml.php')) // Prevent direct access to this file
 {
     $error_file = $_SERVER['SCRIPT_NAME'];
     include_once './error.php';
 }
 
-class TestXml
+class BntTestXml
 {
     static function parse ($filename)
     {
