@@ -4,4 +4,4 @@
 
 require_once __DIR__ . '/composer' . '/autoload_real.php';
 
-return ComposerAutoloaderInit26cabd1946e813b2de517d902b43c78a::getLoader();
+return ComposerAutoloaderInitafacf5fa9a61e199e0883a580b13c10a::getLoader();
