@@ -190,6 +190,7 @@ return array(
     'BntSmarty' => $baseDir . '/classes/BntSmarty.php',
     'BntTeam' => $baseDir . '/classes/BntTeam.php',
     'BntTemplate' => $baseDir . '/classes/BntTemplate.php',
+    'BntTestXml' => $baseDir . '/classes/BntTestXml.php',
     'BntText' => $baseDir . '/classes/BntText.php',
     'BntTimer' => $baseDir . '/classes/BntTimer.php',
     'BntToll' => $baseDir . '/classes/BntToll.php',
@@ -212,7 +213,6 @@ return array(
     'SmartyCompilerException' => $vendorDir . '/smarty/smarty/distribution/libs/Smarty.class.php',
     'SmartyException' => $vendorDir . '/smarty/smarty/distribution/libs/Smarty.class.php',
     'Song' => $vendorDir . '/adodb/adodb-php/tests/test-active-relationsx.php',
-    'TestXml' => $baseDir . '/classes/TestXml.php',
     'adoSchema' => $vendorDir . '/adodb/adodb-php/adodb-xmlschema03.inc.php',
     'adoSchema3' => $vendorDir . '/adoSchema3/adoSchema3.php',
     'adodb_perf' => $vendorDir . '/adodb/adodb-php/adodb-perf.inc.php',
