@@ -2,7 +2,7 @@
 
 // autoload_real.php @generated by Composer
 
-class ComposerAutoloaderInit26cabd1946e813b2de517d902b43c78a
+class ComposerAutoloaderInitafacf5fa9a61e199e0883a580b13c10a
 {
     private static $loader;
 
@@ -19,9 +19,9 @@ class ComposerAutoloaderInit26cabd1946e813b2de517d902b43c78a
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInit26cabd1946e813b2de517d902b43c78a', 'loadClassLoader'), true, true);
+        spl_autoload_register(array('ComposerAutoloaderInitafacf5fa9a61e199e0883a580b13c10a', 'loadClassLoader'), true, true);
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInit26cabd1946e813b2de517d902b43c78a', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInitafacf5fa9a61e199e0883a580b13c10a', 'loadClassLoader'));
 
         $vendorDir = dirname(__DIR__);
         $baseDir = dirname($vendorDir);
